--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Calculator App</title>
+  <title>Calculator</title>
   <link href="style.css" rel="stylesheet">
   <script src="script.js" defer></script>
 </head>
 <body>
   <div class="calculator-grid">
-    <div class="output-screen">
+    <div class="output">
       <div data-previous-operand class="previous-operand"></div>
       <div data-current-operand class="current-operand"></div>
     </div>
